<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.members.MembersViewPagerFragment">

    <HorizontalScrollView
        android:id="@+id/membersScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/membersChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:selectionRequired="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:foregroundGravity="top"
        android:overScrollMode="never"
        android:paddingBottom="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/membersScrollView" />

    <ProgressBar
        android:id="@+id/membersProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noAvailableMembersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_available_members"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/noInternetMembersLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="256dp"
            android:layout_height="256dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bike_no_internet"/>

        <TextView
            android:id="@+id/noInternetMembersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryMembersButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>